fixed the projects card spacing

--- a/Assets/css/portfolio.css
+++ b/Assets/css/portfolio.css
@@ -198,13 +198,21 @@
     padding: 10rem 0;
     
   }
-
-  .card {
-    position: 25rem 50rem 60rem 70rem;
+  .row {
+    padding: 0 0 5rem 0;
     
   }
+
   
- 
+  
+  .projects-section{
+    padding: 5rem 0 0;
+     background: linear-gradient(to bottom, rgba(241, 242, 247, 0.1) 0%, rgba(38, 52, 70, 0.5) 75%,#0e1413 100%), url("../Images/projects1.jpg"); 
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
+  }
   .contact-section {
     padding: 5rem 0 0;
      background: linear-gradient(to bottom, rgba(241, 242, 247, 0.1) 0%, rgba(38, 52, 70, 0.5) 75%,#0e1413 100%), url("../Images/contacts1.jpg"); 
